packages/parser/test/parser/E0135.txt
a: Test.
===== err =====
anonymous:1:9: ParseError: E0135 - Expected member type identifier after dot
1 | a: Test.
  |         ^
